client-perfil change

--- a/public/libreria/js/components/cliente-perfil/cliente-perfil-presenter.html
+++ b/public/libreria/js/components/cliente-perfil/cliente-perfil-presenter.html
@@ -21,7 +21,7 @@
           <input id="dniInput" name="dni" type="text" size="9" placeholder="Ingrese el DNI" required value=""><br>
           <label for="nombreInput">Nombre</label>
           <input id="nombreInput" name="nombre" type="text" size="40" placeholder="Ingrese el nombre" required value=""><br>
-          <label for="apellidosInput">Nombre</label>
+          <label for="apellidosInput">Apellidos</label>
           <input id="apellidosInput" name="apellidos" type="text" size="40" placeholder="Ingrese los apellidos" required value=""><br>
           <label for="direccionArea">Dirección</label>
           <textarea id="direccionArea" name="direccion" rows="8" cols="40" placeholder="Ingrese la direccion" required></textarea><br>
